# recipebox

./: .gitignore  pyproject.toml
recipebox/: settings.py  urls.py
recipes/: admin.py  forms.py  models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_auto_20200604_0034.py  0003_auto_20200604_0153.py  0004_auto_20200604_0228.py  0005_auto_20200604_0250.py  0006_auto_20200604_0307.py
recipes/templates/: genericform.html  index.html
recipes/templates/recipes/: author_detail.html  edit_recipe_form.html  recipe_detail.html  recipe_list.html
