[tool.poetry]
name = "django-recipebox"
version = "0.0.1"
description = "A basic django app with some recipes for you to cook"
authors = ["Mike A. <jimalik2525@gmail.com>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.2"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
